--- a/languages/edd-sl-updater.pot
+++ b/languages/edd-sl-updater.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the same license as the EDD Software Licensing Updater plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: EDD Software Licensing Updater 0.5\n"
+"Project-Id-Version: EDD Software Licensing Updater 0.7\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/edd-sl-updater\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-02-27T15:54:41+00:00\n"
+"POT-Creation-Date: 2019-03-01T18:04:21+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.1.0\n"
 "X-Domain: edd-sl-updater\n"
@@ -51,7 +51,7 @@ msgstr ""
 msgid "deactivate_plugin_license"
 msgstr ""
 
-#. translators: %1: item name, %2: open tag, %3: close tag, %4: version number
+#. translators: %1: item name, %2: open tag, %3: version number, %4: close tag
 #: src/Plugin_Updater.php:215
 msgid "There is a new version of %1$s available. %2$sView version %3$s details%4$s."
 msgstr ""
